# CTP_SEM2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/CourseWork/: MyVector.cpp
src/lib/MyList/: MyList.cpp  Node.cpp
src/lib/lib/: TimeSpan.cpp  calc.cpp  calc.hpp
src/lib/smartptr/: SharedPtr.cpp  UniquePtr.cpp
src/lib/soundex/: soundex.cpp  soundex.hpp
src/lib/time/: CustomLiterals.hpp  Time.cpp  Time.hpp  TimeSpan.cpp  TimeSpan.hpp
src/project/: CMakeLists.txt
src/project/project/: main.cpp
test/: CMakeLists.txt  test.cpp
